@@ -394,7 +394,16 @@ void do_normalmode(struct block * buf) {
                 sh->currow = sh->lastrow;
                 sh->lastrow = newlr;
                 sh->lastcol = newlc;
-            } else if (buf->pnext->value == L't') {                        // gtA4 (goto cell A4)
+
+            } else if (buf->pnext->value == L't') {                        // gt
+                (void) swprintf(interp_line, BUFFERSIZE, L"nextsheet");
+                send_to_interp(interp_line);
+
+            } else if (buf->pnext->value == L'T') {                        // gT
+                (void) swprintf(interp_line, BUFFERSIZE, L"prevsheet");
+                send_to_interp(interp_line);
+
+            } else if (buf->pnext->value == L'o') {                        // goA4 (goto cell A4)
                 (void) swprintf(interp_line, BUFFERSIZE, L"goto %s", parse_cell_name(2, buf));
                 send_to_interp(interp_line);
             }
