@@ -54,7 +54,7 @@ Navigation commands:
      w           Go forward to the next valid cell.
      '{a-zA-Z}   Go to the cell or range marked previously with the character.
                  See 'm' for details.
-     gtab24      Go to cell AB24.  (There is no need to press <ENTER>.)
+     goab24      Go to cell AB24.  (There is no need to press <ENTER>.)
      g0          Go to the leftmost column visible on screen.
      g$          Go to the rightmost column visible on screen.
      gM          Go to the middle column on the screen.
@@ -66,6 +66,8 @@ Navigation commands:
      gg    c-a   Go to the first cell of sheet.
      G     gG    Go to last valid cell of sheet.
      gl          Go to the last (previously occupied) cell position.
+     gt          Move to next sheet in file.
+     gT          Move to previous sheet in file.
      c-f   c-b   Scrolls down and up full screen.
                  :set half_page_scroll=1 to scroll by half a page instead.
                  half_page_scroll=0 (default) scrolls by a full page.
@@ -535,6 +537,14 @@ Commands for handling cell content:
                              :set numeric          (same as :set numeric=1)
                              :set nonumeric        (same as :set numeric=0)
                              :set default_paste_from_clipboard_cmd="xsel"
+
+     :newsheet "{name}"
+                 create a new sheet in file and move to it.
+
+     :nextsheet
+                 move to next sheet in file
+     :prevsheet
+                 move to previous sheet in file
 
      :showmaps   Show all key mappings.
 
