@@ -51,6 +51,7 @@
 #include "sc.h"
 #include "marks.h"
 #include "macros.h"
+#include "color.h"
 #include "conf.h"
 #include "xmalloc.h" // for scxfree
 
